# textprobability

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
examples/: classification.py  defaults.py
textprobability/: classify.py  splitters.py  types.py
textprobability/core/: common.py  defaults.py  lexicon.py  mpf.py  splitters.py  types.py
textprobability/data/: LexiconBuilder.py  en.json  fr.json  get_data.py  langdata.py  serial.py  summarize.py  web_walk.py
textprobability/data/data-collection-logs/: de-data-collection.txt  en-data-collection.txt  es-data-collection.txt  fr-data-collection.txt  it-data-collection.txt  pt-data-collection.txt  tr-data-collection.txt
textprobability/examples/: classification.py  defaults.py
