[metadata]
name = textprobability
version = 0.0.2
author = Peter Donovan
author_email = peterdonovan@berkeley.edu
description = Coarse estimation of the probability of observing a string in a given body of text.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ancient-world-citation-analysis/textprobability
project_urls =
    Bug Tracker = https://github.com/ancient-world-citation-analysis/textprobability/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.5
install_requires =
    numpy
